Fix currency popup dropdown input zoom on mobile

--- a/src/styles/autosuggest.css
+++ b/src/styles/autosuggest.css
@@ -19,7 +19,7 @@ input[type="text"].currencylist {
   background-color: #fff;
   border: 1px solid #eee;
   width: 100%;
-  padding: 6px;
+  padding: 10px;
   font-size: 14px;
   line-height: 25px;
   -webkit-appearance: none;
@@ -27,18 +27,14 @@ input[type="text"].currencylist {
   appearance: none;
   border-radius: 0;
   text-align: start;
-  font-size: 12px !important;
   color: #ab1e56;
 }
 input[type="text"].currencylist::-webkit-input-placeholder {
   font-style: normal;
-  font-size: 12px !important;
 }
 input[type="text"].currencylist:-ms-input-placeholder {
   font-style: normal;
-  font-size: 12px !important;
 }
 input[type="text"].currencylist::-moz-placeholder {
   font-style: normal;
-  font-size: 12px !important;
 }
